# job-board-analyzer

./: .gitignore
src/: .env  charts.py  config.py  content.py  database.ini  default_data.py  heatmaps.py  main.py  psql_query.py  pyproject.toml  queries.sql  query.py  tescior.py
