[tool.poetry]
name = "streamlitapp"
version = "0.1.0"
description = ""
authors = ["Patryk Bundyra <pbundyra@covidgenomics.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.4.0"
pandas = "^1.3.5"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.19.2"
streamlit-echarts = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
