[tool.poetry]
name = "streamlitapp"
version = "0.1.0"
description = ""
authors = ["Patryk Bundyra <pbundyra@covidgenomics.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
streamlit = "^1.4.0"
pandas = "^1.3.4"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.19.2"
streamlit-echarts = "^0.4.0"
altair = "^4.2.0"
plotly-express = "^0.4.1"
plotly = "^5.5.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
